--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,18 @@
 
   <h1> Exceptional </h1>
   <h2> Realty Group </h2>
+
   <a href="index.html">About</a>
   <a href="new-properties.html">New Properties</a>
   <a href="real-eastate-listings.html">Listings</a>
   <a href="market-report.html">Market Report</a>
   <a href="contact.html">Contact</a>
   <a href="http://hud.gov" target ="_blank">H.U.D </a>
-  <h3> New Properties </h3>
+  <h3> Contact</h3>
+
+  <!-- map -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12098.292128843908!2d-73.99623327893873!3d40.70540019036527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a47df06b185%3A0xc889234bc07c42ee!2sBrooklyn+Heights%2C+Brooklyn%2C+NY!5e0!3m2!1sen!2sus!4v1496505420827" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <!-- contact form -->
 
 </body>
 </html>
